added the portfolio-service in the backend folder